# puzzle-sekai

./: .env.development  .env.example  .env.native  .gitattributes  .gitignore  .pnp.cjs  .prettierignore  .prettierrc  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  capacitor.config.ts  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  update-yarn.yml
android/app/: build.gradle  capacitor.build.gradle
docs/: architecture.md  native.md  overnight-hygiene.md
public/: 404.html  _headers  _redirects  llms.txt  robots.txt  sitemap.xml
scripts/: android-apk.mjs  build-fast.mjs  check-i18n.mjs  drop-draft-release.py  gen-com-table.mjs  reorg-src.mjs  subset-fonts.mjs
src/: assets.d.ts  avatar.ts  bgm.ts  board-clear.ts  board-contact.ts  board-core.ts  board-fun.ts  board-physics.ts  board.ts  character-data.ts  clear.ts  config.ts  display.ts  fonts.ts  fun-effects.ts  fun-modes.ts  game-over-menu.ts  index.ts  items.ts  menu-overlays.ts  menu-utils.ts  nenerobo.ts  objects.ts  pause-menu.ts  piece.ts  runtime.ts  score.ts  settings-panel.ts  settings.ts  states.ts  style.scss  types.d.ts  utils.ts  vite-env.d.ts  welcome.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src/a11y/: announce-format.test.ts  announce-format.ts  announce-game.ts  focus-trap-math.test.ts  focus-trap-math.ts  focus-trap.ts  (+6 more)
(+317 files in other folders)
