[package]
name = "puzzle-sekai"
version = "1.1.0"
description = "パズル⭐︎セカ | Puzzle × SEKAI — Project SEKAI fan group-clear puzzle"
authors = ["25-ji-code-de"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "puzzle_sekai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
